--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# idea
+.idea
+*.iml
+*.ucls
+/bin/
+.classpath
+.project
+.settings
+test-output
+
+target/
+
+src/test/resources/webdrivers/
+allure-results/
