--- a/src/test/resources/credential.properties
+++ b/src/test/resources/credential.properties
@@ -1,2 +1,4 @@
-VALID_EMAIL_OR_USER_NAME = email_registration@ukr.net
+VALID_EMAIL = email_registration@ukr.net
 VALID_PASSWORD = Taras_Kr_2022
+INVALID_EMAIL = email.registration@ukr.net
+INVALID_PASSWORD = TarasKr2022
